--- a/form-car.html
+++ b/form-car.html
@@ -1,21 +1,17 @@
 <div name="carForm" novalidate ng-form="carForm" ng-init="bindCar()">
     <div class="form-group">
         <label for="carmanufacturer">Car Manufacturer</label><br>
-        <select name="carmanufacturer" id="carmanufacturer" ng-model="formData.carmanufacturer"
-                ng-options="manufactur.manufacturer for manufactur in cardddata" required class="form-control" ng-change="change()">
-            <option value="">---Please select---</option> <!-- not selected / blank option -->
-           
-
+        <select name="carmanufacturer" id="carmanufacturer" ng-model="formData.carmanufacturer" ng-options="manufactur.manufacturer for manufactur in cardddata" required class="form-control" ng-change="change()" ng-selected="formData.carmanufacturer=singleManufac">
+            <option value="">---Please select---</option> <!-- not selected / blank option -->       
         </select>
     </div>
 
 
     <div class="form-group">
         <label for="carmodel">Car Model</label><br>
-        <select name="carmodel" id="carmodel" ng-model="formData.carmodel" required class="form-control" ng-options="models.model for models in carmodels">
+        <select name="carmodel" id="carmodel" ng-model="formData.carmodel" required class="form-control" ng-init="formData.carmodel=singlModel" ng-options="models.model for models in carmodels" ng-change="updateLocal()" ng-selected="formData.carmanufacturer.model">
             <option value="">---Please select---</option> <!-- not selected / blank option -->
             <!--<option value="{{models.model}}">{{models.model}}</option>-->
-
         </select>
     </div>
 
