--- a/form-payment.html
+++ b/form-payment.html
@@ -1,12 +1,12 @@
 <div name="paymentForm" novalidate ng-form="paymentForm">
     <div class="form-group">
         <label for="creditcardname">Credit Card Number</label>
-        <input type="text" class="form-control" name="creditcardname" ng-model="formData.creditcardname" required>
+        <input type="text" class="form-control" name="creditcardname" ng-model="formData.creditcardname" required watch-change="updateLocal()">
     </div>
 
     <div class="form-group">
         <label for="ccv">CCV</label>
-        <input type="text" class="form-control" name="ccv" ng-model="booCtrl.formData.ccv" required>
+        <input type="text" class="form-control" name="ccv" ng-model="formData.ccv" required watch-change="updateLocal()">
     </div>
 
 
